[package]
name = "tinkoff-invest-client"
version = "0.1.0"
authors = ["Vladimir Petrosian <vladimir@petrosian.me>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.22"
serde_derive = "1.0.104"
serde = "1.0.104"
serde_json = "1.0.48"
reqwest = "0.10.2"
tokio = { version = "0.2.11", features = ["full"] }
chrono = { version = "0.4.11", features = ["serde"] }
tokio-tungstenite = { version = "0.10.1", features = ["tls"] }
tungstenite = "0.10.1"
futures-util = "0.3.4"
futures = "0.3.4"
http = "0.2"

[dev-dependencies]
mockito = "0.25.1"
