[package]
name = "tinkoff-invest-client"
version = "0.1.1"
authors = ["Vladimir Petrosian <vladimir@petrosian.me>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
serde_derive = "1.0.123"
serde = "1.0.123"
serde_json = "1.0.62"
reqwest = "0.11.0"
tokio = { version = "1.2.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
tungstenite = "0.12.0"
futures-util = "0.3.12"
futures = "0.3.12"
http = "0.2.3"

[dev-dependencies]
mockito = "0.29.0"
