[package]
name = "tinkoff-invest-client"
version = "0.2.0"
authors = ["Vladimir Petrosian <vladimir@petrosian.me>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
serde_derive = "1.0.130"
serde = "1.0.130"
serde_json = "1.0.70"
reqwest = "0.11.6"
tokio = { version = "1.13.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
tungstenite = "0.16.0"
futures-util = "0.3.17"
futures = "0.3.17"
http = "0.2.5"

[dev-dependencies]
mockito = "0.30.0"
